Add read step for local folder scans